# DevKit

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: epic-workspaces.md
legacy/: devkit.sh
src/aidevkit/: __init__.py  __main__.py  _install.py  _prs.py  add_repo.py  archive.py  bootstrap.py  check_update.py  cli.py  compat.py  config.py  doctor.py  epic.py  pr_create.py  preflight.py  projects.py  purge.py  refresh_issue_meta.py  review_issue.py  setup.py  status.py  sub_checkout.py  sub_merge.py  sync.py  templates.py  uninstall.py  update.py  util.py  workspace.py
src/aidevkit/commands/: devkit.add-repo.md  devkit.archive.md  devkit.bootstrap.md  devkit.pr-create.md  devkit.preflight.md  devkit.purge.md  devkit.refresh-issue-meta.md  devkit.review-issue.md  devkit.status.md  devkit.sub-checkout.md  devkit.sub-merge.md  devkit.sync.md
src/aidevkit/schemas/: review-issue-findings.schema.json  review-issue-output.schema.json  status.schema.json  sync-output.schema.json
tests/: conftest.py  test_add_repo.py  test_archive.py  test_bootstrap.py  test_check_update.py  test_cli.py  test_doctor.py  test_hermeticity.py  test_hermeticity_structure.py  test_install.py  test_prs.py  test_purge.py  test_refresh_issue_meta.py  test_review_issue.py  test_runner_scope.py  test_setup.py  test_status.py  test_uninstall.py  test_update.py
tests/fixtures/: issue_minimal.json  issue_with_affected_repos.json
tests/fixtures/workspace_md/: malformed_missing_field.md  malformed_no_close.md  valid.md
tests/integration/: conftest.py  test_add_repo_end_to_end.py  test_archive_end_to_end.py  test_bootstrap_tiers.py  test_epic_bootstrap.py  test_epic_lifecycle.py  test_purge_end_to_end.py  test_refresh_issue_meta_integration.py  test_sync_conflict_preserves_work.py  test_sync_continues_on_failure.py  test_sync_happy_path.py  test_sync_trunk_precedence.py
tests/unit/: conftest.py  test_config.py  test_config_review_issue.py  test_epic_graph.py  test_pr_create.py  test_preflight.py  test_projects.py  test_review_issue_resolver.py  test_sub_checkout.py  test_sub_merge.py  test_sync_behind_count.py  test_sync_conflict_classification.py  test_sync_dirty_detection.py  test_sync_human_renderer.py  test_sync_json_schema.py  test_sync_module_shell_seam.py  test_sync_no_destructive_git.py  test_sync_outcome_classification.py  test_sync_rebase_state_detection.py  test_sync_trunk_parser.py  test_sync_trunk_precedence.py  test_sync_workspace_discovery.py  test_templates.py  test_workspace.py
