[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aidevkit"
version = "0.2.0"
description = "Companion tooling for GitHub Spec-Kit — per-issue git worktrees, Claude Code slash commands, and workflow helpers."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
]

[project.scripts]
devkit = "aidevkit.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/aidevkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["src/aidevkit"]
branch = true

[tool.coverage.report]
show_missing = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
