[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aidevkit"
version = "0.2.0"
description = "Companion tooling for GitHub Spec-Kit — per-issue git worktrees, Claude Code slash commands, and workflow helpers."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
]

[project.optional-dependencies]
# Temporary test infra; canonical home is DevKit#22. Remove the duplication
# once that issue merges — the deps listed here should stay a subset.
test = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "jsonschema>=4",
]

[project.scripts]
devkit = "aidevkit.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/aidevkit"]

[tool.hatch.build.targets.wheel.force-include]
"src/aidevkit/schemas" = "aidevkit/schemas"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["src/aidevkit"]
branch = true

[tool.coverage.report]
show_missing = true
